objects/L2I_DSH__c.object
<CustomObject>
    <description>This object represents a Planned Delivery Schedule Header. It corresponds to a set of planes with the same configuration and type.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedule_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Quantity__c</fullName>
        <label>xxAircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aircraft Type that is associated with this Delivery Schedule Header</description>
        <inlineHelpText>Aircraft Type that is associated with this Delivery Schedule Header</inlineHelpText>
        <label>xxAircraft Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>L2I_Aircraft_Type__c.L2I_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedule_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Class__c</fullName>
        <inlineHelpText>Number of Business Class Seats</inlineHelpText>
        <label>xxBusiness Class Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Deal Opportunity with which this Delivery Schedule Header is associated with.</description>
        <inlineHelpText>Select the Deal Opportunity associated with this Delivery Schedule Header</inlineHelpText>
        <label>xxDeal Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Opportunity must be a &quot;Deal&quot; Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.L2I_Record_Type__c</field>
                <operation>equals</operation>
                <value>Deal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedule_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivery Date Offset (months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economy_Class__c</fullName>
        <inlineHelpText>Number of Economy Class Seats</inlineHelpText>
        <label>xxEconomy Class Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Class__c</fullName>
        <inlineHelpText>Number of First Class Seats</inlineHelpText>
        <label>xxFirst Class Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Delivery_Date__c</fullName>
        <label>First Delivery Date</label>
        <summarizedField>L2I_DSL__c.Del_Date_for_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_DSL__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_DSL__c.Delivery_Schedule_Header__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>L2I_Lead_Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Delivery_Date__c</fullName>
        <label>Last Delivery Date</label>
        <summarizedField>L2I_DSL__c.Del_Date_for_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_DSL__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_DSL__c.Delivery_Schedule_Header__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Count__c</fullName>
        <label>Line Count</label>
        <summaryFilterItems>
            <field>L2I_DSL__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted, Deactivate</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_DSL__c.Delivery_Schedule_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Premium_Economy_Class__c</fullName>
        <inlineHelpText>Number of Premium Economy Class Seats</inlineHelpText>
        <label>xxPremium Economy Class Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Term__c</fullName>
        <inlineHelpText>Subscription Term is in number of Months. ie 3 Years = 36 months</inlineHelpText>
        <label>xxSubscription Term (months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>xxTerm Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Aircraft_Months_in_Service__c</fullName>
        <label>xxTotal Aircraft Months in Service</label>
        <summarizedField>L2I_DSL__c.Service_Months_Copy__c</summarizedField>
        <summaryForeignKey>L2I_DSL__c.Delivery_Schedule_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Seat_Count__c</fullName>
        <formula>Business_Class__c + Economy_Class__c + First_Class__c + Premium_Economy_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delivery Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <description>Hardware DSH Record Type</description>
        <label>Hardware</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>